# lofmi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/lofmi/: common.h  elem_oper.h  gray_code.h  karnaugh_area.h  karnaugh_map.h  karnaugh_minimizer.h  normal_form.h  normal_form_terms.h  truth_table.h  utils.h
include/lofmi/karnaugh/: area.h  map.h  minimization.h
src/: elem_oper.cpp  gray_code.cpp  karnaugh_area.cpp  karnaugh_areas_finder.cpp  karnaugh_map.cpp  karnaugh_minimization.cpp  karnaugh_minimizer.cpp  normal_form.cpp  normal_form_terms.cpp  truth_table.cpp
